--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
   </style>
 </head>
 <body>
-  <img src="ChatGPT Image Aug 6, 2025, 12_58_37 PM.png" alt="Logo">
+  <img src="logo.png" alt="Logo">
 </body>
 </html>
