--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
       max-width: 80%;
       height: auto;
     }
+
+    /* On desktop: reduce logo size */
+    @media (min-width: 768px) {
+      img {
+        max-width: 40%; /* 50% smaller than 80% */
+      }
+    }
   </style>
 </head>
 <body>
