--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Your Logo</title>
   <style>
     body {
@@ -12,6 +13,7 @@
       align-items: center;
       background: #fff;
     }
+
     img {
       max-width: 80%;
       height: auto;
@@ -20,7 +22,7 @@
     /* On desktop: reduce logo size */
     @media (min-width: 768px) {
       img {
-        max-width: 40%; /* 50% smaller than 80% */
+        max-width: 40%; /* 50% smaller than mobile */
       }
     }
   </style>
